[package]
name = "gltf-viewer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
gltf = { version = "1.4", features = ["utils"] }
nalgebra-glm = "0.18"
base64 = "0.21"
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "WebGl2RenderingContext",
  "WebGlRenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlBuffer",
  "WebGlUniformLocation",
  "Window",
  "FileReader",
  "File",
  "Blob",
  "Event",
  "EventTarget",
  "HtmlInputElement",
  "Performance",
] }
